--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -7,5 +7,11 @@ handlers:
 - url: /robots.txt
   script: robots.py
 
+- url: /users/
+  script: users.py
+
+- url: /environs
+  script: environs.py
+
 - url: /.*
   script: request.py
