--- a/gae_py/groups.yaml
+++ b/gae_py/groups.yaml
@@ -1,6 +1,10 @@
 create_new_user:
 - users
+delete_user:
+- users
 get_chap_user_creds:
 - ROOT
 get_user_groups:
+- ROOT
+update_chap_user_creds:
 - ROOT
