--- a/test/config.yaml
+++ b/test/config.yaml
@@ -7,3 +7,7 @@ full:
   - name: NotFound
     tests:
     - test_notFound
+  - name: JSONRequest
+    tests:
+    - test_invalidMethods
+    - test_invalidContentTypeHeader
