tested invalid JSONRequest body

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -12,3 +12,4 @@ full:
     - test_invalidMethods
     - test_invalidContentTypeHeader
     - test_invalidAcceptHeader
+    - test_invalidJSONRequestBody
