added tests for /users/ url

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -14,3 +14,10 @@ full:
     - test_invalidAcceptHeader
     - test_invalidJSONRequestBody
     - test_invalids
+- module: users
+  classes:
+  - name: UsersURL
+    tests:
+    - test_methodNotAllowed
+    - test_noUserURL
+    - test_usernameNotMatch
