updated documentation (and ran tests again)

--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -1,14 +1,27 @@
+#
+# Main application configuration file used by App Engine
+#
+
+# The name and version of the application
 application: fireworks-skylight 
 version: 5
+
+# The App Engine runtime api specification
 runtime: python
 api_version: 1
 
+# request handler directives
 handlers:
+
+  # Return the robots.txt file for crawler bots.
 - url: /robots.txt
   script: robots.py
 
+  # Print out a list of environment variables set by App Engine and return as
+  # an http response.
 - url: /environs
   script: environs.py
 
+  # All other requests are sent to request.py
 - url: /.*
   script: request.py
