Implemented local user test setup
 On branch master
	modified:   gae_py/app.yaml
	new file:   gae_py/testsetup.py
	modified:   test/config.yaml
	modified:   test/tests/basic.py

--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -4,7 +4,7 @@
 
 # The name and version of the application
 application: fireworks-skylight 
-version: 5
+version: 0-1-1
 
 # The App Engine runtime api specification
 runtime: python
@@ -22,6 +22,12 @@ handlers:
 - url: /environs
   script: environs.py
 
+  # Set up for user testing
+  # ON LOCAL dev_appserver ONLY !!! (security)
+- url: /testsetup
+  script: testsetup.py
+
   # All other requests are sent to request.py
 - url: /.*
   script: request.py
+
