--- a/test/config.yaml
+++ b/test/config.yaml
@@ -44,6 +44,7 @@ full:
 
   - name: PrivUsers_BaseUser
     tests:
+    - test_getBaseUser
     - test_invalidGroup
     - test_baseUser
     - test_sys_admin
