User management scheme is testing ok
 On branch master
	modified:   gae_py/factory.py
	modified:   test/config.yaml
	modified:   test/tests/users.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -47,4 +47,7 @@ full:
     - test_getBaseUser
     - test_invalidGroup
     - test_baseUser
+    - test_databaseUser
+    - test_accountUser
+    - test_userAdmin
     - test_sys_admin
