--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -4,7 +4,7 @@
 
 # The name and version of the application
 application: fireworks-skylight 
-version: 0-1-2
+version: 0-2
 
 # The App Engine runtime api specification
 runtime: python
