Started protocol testing.
 On branch test_protocol
	modified:   test/config.yaml
	modified:   test/testrunner.py
	new file:   test/tests/protocol.py
	new file:   test/tests/test_utils.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -85,3 +85,14 @@ databases:
   - name: CreateDatabase
     tests:
     - test_create_db
+
+# The full set of DCube protocol tests
+protocol:
+- module: protocol
+  
+  classes:
+  
+  - name: Basic
+    tests:
+    - test_docs
+    - test_root
