New refactor is working on local and remote hosts.
 On branch test_protocol
	modified:   gae_py/app.yaml
	modified:   gae_py/request.py
	new file:   gae_py/toolkit.py
	modified:   test/config.yaml
	modified:   test/testrunner.py
	modified:   test/tests/protocol.py
	modified:   test/tests/test_utils.py

--- a/gae_py/app.yaml
+++ b/gae_py/app.yaml
@@ -13,6 +13,10 @@ api_version: 1
 # request handler directives
 handlers:
 
+# Print out a list of the environment variables in text/plain
+- url: /environs
+  script: environs.py
+
 # One ring to rule them all.
 - url: /.*
   script: request.py
