start user management
 On branch test_protocol
	modified:   gae_py/request.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -99,3 +99,7 @@ protocol:
     - test_docs
     - test_root
     - test_authenticate
+
+  - name: UserManagement
+    tests:
+    - test_check_user
