create a new user and authenticate
 On branch test_protocol
	modified:   gae_py/handler.py
	modified:   gae_py/jsonrequest.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -98,3 +98,8 @@ protocol:
     - test_robots
     - test_root
     - test_authenticate
+
+  - name: UserManagement
+    tests:
+    - test_check_user
+    - test_create_user
