Factored some stuff out.
 On branch test_protocol
	modified:   gae_py/handler.py
	modified:   gae_py/http.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -101,5 +101,7 @@ protocol:
 
   - name: UserManagement
     tests:
+    - test_users_url
     - test_check_user
     - test_create_user
+    - test_user_access
