Started /databases/ URL
 On branch test_protocol
	modified:   gae_py/handler.py
	modified:   gae_py/store.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -105,3 +105,7 @@ protocol:
     - test_check_user
     - test_create_user
     - test_user_access
+
+  - name: DatabaseManagement
+    tests:
+    - test_databases_url
