refactor for proper abstract datatypes
 On branch master
	new file:   gae_py/dcube_types.py
	modified:   gae_py/handler.py
	modified:   gae_py/http.py
	modified:   gae_py/jsonrequest.py
	modified:   gae_py/store.py
	modified:   gae_py/testsetup.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py
	modified:   test/tests/teardown.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -53,3 +53,20 @@ protocol:
     - test_databases_url
     - test_create_database
     - test_database_update
+
+# Test CHAP authentication.
+authentication:
+- module: protocol
+  classes:
+  - name: Basic
+    tests:
+    - test_authenticate
+
+# Test user management access.
+useraccess:
+- module: protocol
+  classes:
+  - name: UserManagement
+    tests:
+    - test_create_user
+    - test_user_access
