start query functionality with "put" action
 On branch master
	modified:   gae_py/handler.py
	modified:   gae_py/store.py
	modified:   gae_py/testsetup.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -33,6 +33,7 @@ full:
     - test_setup
     - test_basic_syntax
     - test_access_list
+    - test_query
 
 # The full set of DCube protocol tests
 protocol:
@@ -65,6 +66,7 @@ protocol:
     - test_setup
     - test_basic_syntax
     - test_access_list
+    - test_query
 
 # Test CHAP authentication.
 authentication:
@@ -100,3 +102,4 @@ query:
     - test_setup
     - test_basic_syntax
     - test_access_list
+    - test_query
