refactor, db query capability
 On branch master
	modified:   gae_py/handler.py
	modified:   gae_py/index.yaml
	modified:   gae_py/store.py
	modified:   gae_py/testsetup.py
	modified:   test/config.yaml
	modified:   test/testrunner.py
	modified:   test/tests/protocol.py
	modified:   test/tests/teardown.py

--- a/gae_py/index.yaml
+++ b/gae_py/index.yaml
@@ -9,3 +9,25 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: GeneralData
+  properties:
+  - name: class
+  - name: idx
+
+- kind: GeneralData
+  properties:
+  - name: class
+  - name: tags
+  - name: idx
+
+- kind: GeneralData
+  properties:
+  - name: idx_class
+  - name: idx_idx
+
+- kind: GeneralData
+  properties:
+  - name: idx_class
+  - name: idx_tags
+  - name: idx_idx
