Creating secondary test db in tests.
 On branch v0.7_branch
	modified:   test/config.yaml
	modified:   test/testrunner.py
	modified:   test/tests/protocol.py
	modified:   test/tests/teardown.py

--- a/test/config.yaml
+++ b/test/config.yaml
@@ -100,6 +100,23 @@ query:
     - test_access_list
     - test_query
 
+# Test database integrity.
+integrity:
+- module: protocol
+  # The integrity tests need the test user and test database to be created.
+  classes:
+  - name: UserManagement
+    tests:
+    - test_create_user
+  - name: DatabaseManagement
+    tests:
+    - test_create_database
+
+  - name: DatabaseIntegrity
+    tests:
+    - test_logical_separation
+
+
 # The full set of DCube protocol tests
 protocol:
 - module: protocol
