tested: logical separation of data between db
 On branch v0.7_branch
	modified:   gae_py/handler.py
	modified:   gae_py/index.yaml
	modified:   gae_py/store.py
	modified:   test/config.yaml
	modified:   test/tests/protocol.py

--- a/gae_py/index.yaml
+++ b/gae_py/index.yaml
@@ -23,6 +23,24 @@ indexes:
 
 - kind: GeneralData
   properties:
+  - name: database
+  - name: idx_class
+  - name: idx_idx
+
+- kind: GeneralData
+  properties:
+  - name: database
+  - name: idx_class
+  - name: idx_tags
+  - name: idx_idx
+
+- kind: GeneralData
+  properties:
+  - name: database
+  - name: idx_idx
+
+- kind: GeneralData
+  properties:
   - name: idx_class
   - name: idx_idx
 
